# dodge

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: config.py  database.py  main.py  models.py
app/routers/: chat.py  graph.py
app/services/: graph_service.py  guardrails.py  llm_service.py  prompts.py  sql_executor.py  trace_service.py
app/utils/: data_loader.py  response_parser.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.d.ts
frontend/src/api/: client.ts
frontend/src/components/: Breadcrumb.tsx  ChatPanel.tsx  GraphPanel.tsx  Logo.tsx  NodeDetail.tsx
frontend/src/hooks/: useChat.ts  useGraph.ts  useHighlightedNodes.ts
frontend/src/store/: chatStore.ts  graphStore.ts
