[project]
name = "dodge"
version = "0.1.0"
description = "Context graph system with LLM-powered query interface for SAP O2C data"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "sqlparse>=0.5.0",
]

[project.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"
